src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>rC_Connect__Backorder_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of items backordered for open requests.</description>
        <inlineHelpText>Total number of items backordered for open requests.</inlineHelpText>
        <label>Backorder Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Connect__City__c</fullName>
        <description>Auto populated, &quot;City&quot; where product is to be delivered.</description>
        <inlineHelpText>&quot;City&quot; where product is to be delivered.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Country__c</fullName>
        <description>Auto populated,  &quot;Country&quot; of person being delivered a product.</description>
        <inlineHelpText>&quot;Country&quot; of person being delivered a product.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Delivery_Address__c</fullName>
        <description>Formula field providing concatenation of address fields.</description>
        <formula>IF(AND(ISBLANK(rC_Connect__Street_Line_1__c), ISBLANK(rC_Connect__Street_Line_2__c), ISBLANK(rC_Connect__City__c), ISBLANK(rC_Connect__State__c),ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c)),
 &apos;&apos; ,
IF(rC_Connect__Street_Line_1__c ==&apos;&apos;, &apos;&apos; ,
IF( AND(ISBLANK(rC_Connect__Street_Line_2__c), ISBLANK(rC_Connect__City__c), ISBLANK(rC_Connect__State__c),ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c))
,rC_Connect__Street_Line_1__c,rC_Connect__Street_Line_1__c&amp;&apos;, &apos;) )&amp;

IF(rC_Connect__Street_Line_2__c==&apos;&apos; ,&apos;&apos;,
IF(AND(ISBLANK(rC_Connect__City__c), ISBLANK(rC_Connect__State__c),ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c))
,rC_Connect__Street_Line_2__c,rC_Connect__Street_Line_2__c&amp;&apos;, &apos;))&amp;

IF(rC_Connect__City__c ==&apos;&apos;,&apos;&apos;,
IF(AND(ISBLANK(rC_Connect__State__c),ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c))
 ,rC_Connect__City__c,rC_Connect__City__c &amp;&apos;, &apos;))&amp;

IF(rC_Connect__State__c==&apos;&apos;,&apos;&apos;,
IF(AND(ISBLANK(rC_Connect__Postal_Code__c),ISBLANK(rC_Connect__Country__c))
,rC_Connect__State__c,rC_Connect__State__c&amp; &apos;, &apos;))&amp;

IF(rC_Connect__Postal_Code__c==&apos;&apos;,&apos;&apos;,
IF(ISBLANK(rC_Connect__Country__c),rC_Connect__Postal_Code__c,rC_Connect__Postal_Code__c&amp; &apos;, &apos;))&amp;

IF(rC_Connect__Country__c==&apos;&apos;, &apos;&apos; , rC_Connect__Country__c)

)</formula>
        <inlineHelpText>Provides concatenation of address fields.</inlineHelpText>
        <label>Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Email__c</fullName>
        <description>Auto populated, &quot;Email address&quot; of person being delivered a product.</description>
        <inlineHelpText>&quot;Email address&quot; of person being delivered a product.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Connect__First_Name__c</fullName>
        <description>Auto populated, &quot;First Name&quot; of person who is to receive product.</description>
        <inlineHelpText>&quot;First Name&quot; of person who is to receive product.</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Last_Name__c</fullName>
        <description>Auto populated, &quot;Last Name&quot; of person being delivered product.</description>
        <inlineHelpText>&quot;Last Name&quot; of person being delivered product.</inlineHelpText>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Person_Details__c</fullName>
        <description>Formula field providing the Salutation, First Name, Last Name and Suffix of person being delivered a product.</description>
        <formula>rC_Connect__Salutation__c  &amp; &apos; &apos;&amp; rC_Connect__First_Name__c&amp; &apos; &apos;&amp; rC_Connect__Last_Name__c&amp; &apos; &apos;&amp; rC_Connect__Suffix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Salutation, First Name, Last Name and Suffix of person being delivered a product.</inlineHelpText>
        <label>Person Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Postal_Code__c</fullName>
        <description>Auto populated, &quot;Postal Code&quot; of person being delivered a product.</description>
        <inlineHelpText>&quot;Postal Code&quot; of person being delivered a product.</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Salutation__c</fullName>
        <description>Auto populated, &quot;Salutation&quot; of person being delivered a product.</description>
        <inlineHelpText>&quot;Salutation&quot; of person being delivered a product.</inlineHelpText>
        <label>Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Selected_Delivery_Address__c</fullName>
        <description>Formula field providing the &quot;Selected Delivery Address&quot; of person being delivered a product.</description>
        <formula>IF (
OR( ISPICKVAL( rC_Giving__Delivery_Method__c , &apos;Billing Address&apos;) ,
    ISPICKVAL(  rC_Giving__Delivery_Method__c , &apos;Shipping Address&apos;),
    ISPICKVAL(  rC_Giving__Delivery_Method__c , &apos;Mailing Address&apos;),
    ISPICKVAL(  rC_Giving__Delivery_Method__c , &apos;Other Address&apos;)
)
 , BLANKVALUE(rC_Connect__Delivery_Address__c, &apos;None selected&apos;) + &apos; [&apos; + HYPERLINK(&apos;/apex/opportunity_managedeliveryaddresses?id=&apos; +  OpportunityId +     &apos;&amp;opportunityLineItem.Id=&apos; + Id + &apos;&amp;contact.Id=&apos; + rC_Giving__Beneficiary__c , &apos;Change&apos;, &apos;_self&apos;) + &apos;]&apos; ,
 IF( ISPICKVAL(  rC_Giving__Delivery_Method__c , &apos;Email&apos;)
 , BLANKVALUE( rC_Connect__Email__c , &apos;None selected&apos;) + &apos; [&apos; + HYPERLINK(&apos;/apex/opportunity_managedeliveryaddresses?id=&apos; +  OpportunityId +     &apos;&amp;opportunityLineItem.Id=&apos; + Id + &apos;&amp;contact.Id=&apos; + rC_Giving__Beneficiary__c , &apos;Change&apos;, &apos;_self&apos;) + &apos;]&apos;  ,
 IF(
    ISPICKVAL( rC_Giving__Delivery_Method__c , &apos;In Person&apos;)
	, BLANKVALUE(rC_Connect__Person_Details__c , &apos;None selected&apos;) + &apos; [&apos; + HYPERLINK(&apos;/apex/opportunity_managedeliveryaddresses?id=&apos; +  OpportunityId +     &apos;&amp;opportunityLineItem.Id=&apos; + Id + &apos;&amp;contact.Id=&apos; + rC_Giving__Beneficiary__c , &apos;Change&apos;, &apos;_self&apos;) + &apos;]&apos;
    , &apos;None selected&apos; + &apos; [&apos; + HYPERLINK(&apos;/apex/opportunity_managedeliveryaddresses?id=&apos; +  OpportunityId +     &apos;&amp;opportunityLineItem.Id=&apos; + Id + &apos;&amp;contact.Id=&apos; + rC_Giving__Beneficiary__c , &apos;Change&apos;, &apos;_self&apos;) + &apos;]&apos;
  )
 )
)</formula>
        <inlineHelpText>Indicates &quot;Selected Delivery Address&quot; of person being delivered a product.</inlineHelpText>
        <label>Selected Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__State__c</fullName>
        <description>Auto populated, &quot;State&quot; of person being delivered a product.</description>
        <inlineHelpText>&quot;State&quot; of person being delivered a product.</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Street_Address__c</fullName>
        <description>Auto populated, &quot;Street Address&quot; of person being delivered a product.</description>
        <formula>IF(AND(ISBLANK(rC_Connect__Street_Line_1__c), ISBLANK(rC_Connect__Street_Line_2__c)), NULL, IF(ISBLANK(rC_Connect__Street_Line_2__c), rC_Connect__Street_Line_1__c, rC_Connect__Street_Line_1__c + &apos;, &apos; + rC_Connect__Street_Line_2__c))</formula>
        <inlineHelpText>&quot;Street Address&quot; of person being delivered a product.</inlineHelpText>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Street_Line_1__c</fullName>
        <description>Auto populated, &quot;Street Line 1&quot; of person being delivered a product.</description>
        <inlineHelpText>&quot;Street Line 1&quot; of person being delivered a product.</inlineHelpText>
        <label>Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Street_Line_2__c</fullName>
        <description>Auto populated, &quot;Street Line 2&quot; of person being delivered a product.</description>
        <inlineHelpText>&quot;Street Line 2&quot; of person being delivered a product.</inlineHelpText>
        <label>Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Suffix__c</fullName>
        <description>Auto populated, &quot;Suffix&quot; of person being delivered a product.</description>
        <inlineHelpText>Suffix of person being delivered a product.</inlineHelpText>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated lookup to the Contact Beneficiary of a Giving Item.</description>
        <inlineHelpText>Contact Beneficiary of a Giving Item.</inlineHelpText>
        <label>Beneficiary</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products (As Beneficiary)</relationshipLabel>
        <relationshipName>Opportunity_Products_Beneficiary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Delivery_Comments__c</fullName>
        <description>Manually populated donor comments related to the delivery.</description>
        <inlineHelpText>Donor comments related to the delivery.</inlineHelpText>
        <label>Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Delivery_Method__c</fullName>
        <description>Manually populated field indicating the method used to deliver a giving item.</description>
        <inlineHelpText>Method used to deliver a giving item.</inlineHelpText>
        <label>Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Address</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Delivery_Status__c</fullName>
        <description>Automatically updated from your fulfillment vendor records, this field displays the status of delivering a Giving Item pr Package.</description>
        <inlineHelpText>Status of delivering a Giving Item or Package.</inlineHelpText>
        <label>Delivery Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Total_Price__c</fullName>
        <description>Formula field calculating the  Items or Package Pricebook unit price * Quantity.</description>
        <formula>PricebookEntry.UnitPrice * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Items or Package Pricebook unit price * Quantity.</inlineHelpText>
        <label>Expected Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated lookup to the related Account&apos;s Giving Level.</description>
        <inlineHelpText>Account&apos;s Giving Level.</inlineHelpText>
        <label>Giving Level</label>
        <referenceTo>rC_Giving__Giving_Level__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated lookup to the related Item.</description>
        <inlineHelpText>Lookup to related Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Product_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Package_Name__c</fullName>
        <description>Auto Populated field reflecting the related Package Name.</description>
        <inlineHelpText>Related Package Name.</inlineHelpText>
        <label>Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated lookup to the related Package.</description>
        <inlineHelpText>Lookup to related Package.</inlineHelpText>
        <label>Package</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Product_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Suspend_Date__c</fullName>
        <description>If a benefit is marked to suspend, we will suspend the delivery until this date.Ideally, this value should only be populated if the delivery status is suspended</description>
        <inlineHelpText>If a benefit is marked to suspend, we will suspend the delivery until this date.Ideally, this value should only be populated if the delivery status is suspended</inlineHelpText>
        <label>Suspend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Transferor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact who transfers an Opportunity Product.</description>
        <inlineHelpText>Contact who transfers an Opportunity Product.</inlineHelpText>
        <label>Transferor @Deprecated(Version=2.0)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products (As Transferor)</relationshipLabel>
        <relationshipName>Opportunity_Products_Transferor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, look up to the Shipment record related to this Opportunity Product record.</description>
        <inlineHelpText>Look up to the Shipment record related to this Opportunity Product record.</inlineHelpText>
        <label>Shipment</label>
        <referenceTo>rC_Inventory__Shipment__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>rC_Giving__Inactive_Items</fullName>
        <active>true</active>
        <description>This rule states that Items or Packages must be &quot;Active&quot;.</description>
        <errorConditionFormula>AND($Setup.rC_Giving__Opportunity_Product_Validation__c.rC_Giving__Inactive_Items__c, OR( Product2.IsActive  = false , rC_Giving__Item__r.IsActive = false , rC_Giving__Package__r.IsActive = false))</errorConditionFormula>
        <errorMessage>Cannot add Item or Package because it is not Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Giving__Individually_Not_Available_Items</fullName>
        <active>true</active>
        <description>This rule states that Items with &quot;Not_available_individually&quot; checked must be part of a package when being added to a Giving.</description>
        <errorConditionFormula>AND($Setup.rC_Giving__Opportunity_Product_Validation__c.rC_Giving__Individually_Not_Available_Items__c, OR(Product2.rC_Giving__Not_available_individually__c,  rC_Giving__Item__r.rC_Giving__Not_available_individually__c ), rC_Giving__Package__c = null)</errorConditionFormula>
        <errorMessage>ERROR : This Item can not be added individually.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Giving__Items_With_Expired_Start_End_Date</fullName>
        <active>true</active>
        <description>This rule states that the &quot;Start Date&quot; and &quot;End Date&quot; of Items being added to a Giving must be before and after (respectively) the Giving &quot;Close Date&quot;.</description>
        <errorConditionFormula>AND($Setup.rC_Giving__Opportunity_Product_Validation__c.rC_Giving__Items_With_Expired_Start_End_Date__c, OR(Opportunity.CloseDate  &gt;   rC_Giving__Item__r.rC_Giving__End_Date__c , Opportunity.CloseDate  &gt;  rC_Giving__Package__r.rC_Giving__End_Date__c  , Opportunity.CloseDate  &gt;  Product2.rC_Giving__End_Date__c , Opportunity.CloseDate  &lt;  rC_Giving__Item__r.rC_Giving__Start_Date__c ,  Opportunity.CloseDate  &lt;  rC_Giving__Package__r.rC_Giving__Start_Date__c , Opportunity.CloseDate  &lt;  Product2.rC_Giving__Start_Date__c ))</errorConditionFormula>
        <errorMessage>Close Date should be between Start and End Date</errorMessage>
    </validationRules>
</CustomObject>